--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@ body {
   font-family: 'Kumbh Sans', sans-serif;
   background: var(--dark-cyan);
   text-align: center;
+  background-image: url('images/bg-pattern-top.svg'),
+    url('images/bg-pattern-bottom.svg');
+  height: 98vh;
+  background-repeat: no-repeat;
+  background-position: bottom 50vh right 50vw, top 50vh left 50vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
@@ -17,10 +25,9 @@ body {
   position: relative;
   width: 350px;
   height: 373px;
-  margin: 25vh auto;
   border-radius: 0.9rem;
   background-color: white;
-  box-shadow: 0px 0px 20px 1px rgb(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 100px 1px rgb(0, 0, 0, 0.3);
 }
 
 .banner-top {
@@ -32,7 +39,7 @@ body {
   left: 50%;
   top: 37.5%;
   transform: translate(-50%, -50%);
-  border: 4px solid white;
+  border: 6px solid white;
   border-radius: 50%;
 }
 
@@ -73,7 +80,7 @@ body {
 hr {
   border: none;
   height: 1px;
-  background-color: #ccc;
+  background-color: #ddd;
   width: 98%;
   margin: 0 auto;
 }
@@ -97,33 +104,17 @@ hr {
   font-size: 0.6rem;
   letter-spacing: 1.2px;
   color: var(--dark-gray);
+  font-weight: bold;
 }
 
 .number {
-  padding-bottom: 0.4rem;
+  padding-bottom: 0.5rem;
   font-size: 0.9rem;
-  font-weight: 600;
+  font-weight: bolder;
   color: var(--verydark-desaturated-blue);
-}
-
-.top-bg {
-  z-index: -1;
-  position: absolute;
-  top: -50%;
-  left: 0%;
-  transform: translate(0%, 0%);
-  opacity: 0.9;
-}
-
-.bottom-bg {
-  z-index: -1;
-  position: absolute;
-  bottom: -50%;
-  right: 0;
-  transform: translate(0%, 0%);
-  opacity: 0.9;
 }
 
 footer {
   z-index: 99;
+  margin-top: 50%;
 }
